--- a/demo/src/main/res/layout/kml_demo.xml
+++ b/demo/src/main/res/layout/kml_demo.xml
@@ -16,20 +16,25 @@
 -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_above="@id/textView"
     android:layout_below="@+id/map"
-    android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    android:orientation="vertical">
 
     <fragment
-            android:id="@+id/map"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            tools:layout="@layout/kml_demo"/>
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        tools:layout="@layout/kml_demo" />
 
+    <Button
+        android:id="@+id/buttonClear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Clear" />
 
 </LinearLayout>
